# etl-bonobo

./: pyproject.toml
etl/: parametros.py  request_json_to_csv.py  tutorial_01.py  tutorial_02.py  tutorial_02_json_to_csv.py  tutorial_03.py
outputs/: output_tutorial_03.csv  request_json_to_csv.csv  tutorial_02_json_to_csv.csv
